# Analyse-e-commerce-2023-vs-2024-thelook_ecommerce

./: .gitignore  README.md  Test_PBI.pbix  main.py  pyproject.toml
notebooks/: 02_checks_coherence_tests.ipynb .ipynb  eda_thelook_fr_women_2023_2024.ipynb  tests_checks_coherence.ipynb
slides/: Soutenance_DATAGONG_TheLook_2023_2024.pptx
sql/: 01_kpi_ca_par_annee.sql  02_kpi_marge_par_annee.sql  03_kpi_aov_par_annee.sql  04_kpi_taux_retour_par_annee.sql  05_kpi_taux_reachat_par_annee.sql  extract_sous_perimetre.sql  kpi_aov_par_annee.sql  kpi_ca_par_annee.sql  kpi_marge_par_annee.sql  kpi_taux_reachat_par_annee.sql  kpi_taux_retour_par_annee.sql
sql/data/: csv_BigQuery.csv
