[project]
name = "thelook-fr-women-2023-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "jupyter-client>=8.7.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "seaborn>=0.13.2",
]
